# maroloDAQ

./: COPYING  Makefile  Makefile.in  README.md  calibration.h  comserial.cpp  comserial.cpp.backup  comserial.h  config.h  config.h.in  config.status  configure  configure.ac  firmware  graceutils.c  graceutils.h  icons.qrc  main.cpp  make.out  maroloDAQ  maroloDAQ.backup  maroloDAQ.cpp  maroloDAQ.cpp.backup  maroloDAQ.findMarolo.buggado  maroloDAQ.h  maroloDAQ.h.backup  maroloDAQ.pro  maroloDAQ.pro.user.be2b541  maroloDAQ.pro.user.e7b50cb  maroloDAQ.qrc  maroloDAQ.spec  maroloDAQ.ui  maroloDAQ.ui.backup  maroloDAQ.ui.backup.old  moc_maroloDAQ.cpp  moc_maroloDAQ.cpp.backup  qrc_icons.cpp  sleeper.cpp  sleeper.h  ui_maroloDAQ.h  (+1 more)
doc/: mainwindow_qt5example  placa_arduino_computador.odg
fluxogramas/: fw_maroloDAQ-principal.jpg.orig
fw_maroloDAQ/: fw_maroloDAQ.ino  fw_maroloDAQ.ino.backup  maroloDAQ.ino.backup
fw_projMarolo/: fw_projMarolo.ino
images/: marolodaq_icon.odg  marolodaq_sketch_allinone.odg
include/: maroloDAQ.h
maroloMgr/: Makefile  cleanup_files.bash  make.out
maroloMgr/CVS/: Entries  Repository
maroloMgr/include/: drdaqMsgs.h  guiStim.h  guiStimProto.h  maroloMsgs.h  picoMgr.h  picoMgrMsgs.h  picoMgrProto.h  picoStim.h  picoStimProto.h  pico_lnx.h
maroloMgr/src/: Makefile  picoMgr.c  picoMgrInit.c  picoMgrUtils.c
maroloMgr/test/: Makefile  arduino-serial.c  arduino_writeread.c  autoStim.c  autoguiStim.c  canonicalarduinoread.c  guiStim.c  guiStim.tcl  guiStimInit.c  guiStimUtils.c  picoStim.c  (+6 more)
maroloRelay/: Makefile
nameServer/: Makefile
(+83 files in other folders)
